--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= redmine_http_basic_authentication
+= Redmine HTTP Basic Authentication
 
 The purpose of this plugin is to hide the standard login form of Redmine.
 This plugin can be useful if your redmine goes Internet without a reverse proxy and you want to keep the login process on Redmine.
@@ -7,6 +7,11 @@ This plugin can be useful if your redmine goes Internet without a reverse proxy 
 == Installation
 
 * Import project from github into your redmine plugins' directory
- * git clone https://github.com/pburgisser/redmine_http_basic_authentication.git
+  * git clone https://github.com/pburgisser/redmine_http_basic_authentication.git
 * Install the plugin on redmine
- * rake redmine:plugins:migrate
+  * rake redmine:plugins:migrate
+* Reload your redmine's instance
+
+== Open bugs:
+
+* Due to the design of HTTP, there's no solution to clear the basic authentication cache
